# pkg/apis/application/v1alpha1/types.go
@@ -1091,7 +1091,8 @@ type SyncOperation struct {
 	Sources ApplicationSources `json:"sources,omitempty" protobuf:"bytes,10,opt,name=sources"`
 	// Revisions is the list of revision (Git) or chart version (Helm) which to sync each source in sources field for the application to
 	// If omitted, will use the revision specified in app spec.
-	Revisions []string `json:"revisions,omitempty" protobuf:"bytes,11,opt,name=revisions"`
+	Revisions      []string `json:"revisions,omitempty" protobuf:"bytes,11,opt,name=revisions"`
+	ChangeRevision string   `json:"changeRevision,omitempty" protobuf:"bytes,12,opt,name=changeRevision"`
 }
 
 // IsApplyStrategy returns true if the sync strategy is "apply"
@@ -1329,6 +1330,7 @@ type SyncOperationResult struct {
 	Revisions []string `json:"revisions,omitempty" protobuf:"bytes,5,opt,name=revisions"`
 	// ManagedNamespaceMetadata contains the current sync state of managed namespace metadata
 	ManagedNamespaceMetadata *ManagedNamespaceMetadata `json:"managedNamespaceMetadata,omitempty" protobuf:"bytes,6,opt,name=managedNamespaceMetadata"`
+	ChangeRevision           string                    `json:"changeRevision,omitempty" protobuf:"bytes,7,opt,name=changeRevision"`
 }
 
 // ResourceResult holds the operation result details of a specific resource
@@ -1403,7 +1405,8 @@ type RevisionHistory struct {
 	// Sources is a reference to the application sources used for the sync operation
 	Sources ApplicationSources `json:"sources,omitempty" protobuf:"bytes,8,opt,name=sources"`
 	// Revisions holds the revision of each source in sources field the sync was performed against
-	Revisions []string `json:"revisions,omitempty" protobuf:"bytes,9,opt,name=revisions"`
+	Revisions      []string `json:"revisions,omitempty" protobuf:"bytes,9,opt,name=revisions"`
+	ChangeRevision string   `json:"changeRevision,omitempty" protobuf:"bytes,10,opt,name=changeRevision"`
 }
 
 // ApplicationWatchEvent contains information about application change.
