# reposerver/repository/repository.go
@@ -2967,3 +2967,70 @@ func (s *Service) updateCachedRevision(logCtx *log.Entry, oldRev string, newRev 
 func (s *Service) GenerateManifestWithFiles(server apiclient.RepoServerService_GenerateManifestWithFilesServer) error {
 	return nil
 }
+
+func (s *Service) GetChangeRevision(ctx context.Context, request *apiclient.ChangeRevisionRequest) (*apiclient.ChangeRevisionResponse, error) {
+	logCtx := log.WithFields(log.Fields{"application": request.AppName, "appNamespace": request.Namespace})
+
+	repo := request.GetRepo()
+	currentRevision := request.GetCurrentRevision()
+	previousRevision := request.GetPreviousRevision()
+	refreshPaths := request.GetPaths()
+
+	if repo == nil {
+		return nil, status.Error(codes.InvalidArgument, "must pass a valid repo")
+	}
+
+	if len(refreshPaths) == 0 {
+		return nil, status.Error(codes.InvalidArgument, "must pass a refresh path")
+	}
+
+	gitClientOpts := git.WithCache(s.cache, true)
+	gitClient, revision, err := s.newClientResolveRevision(repo, currentRevision, gitClientOpts)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "unable to resolve git revision %s: %v", revision, err)
+	}
+
+	s.metricsServer.IncPendingRepoRequest(repo.Repo)
+	defer s.metricsServer.DecPendingRepoRequest(repo.Repo)
+
+	closer, err := s.repoLock.Lock(gitClient.Root(), revision, true, func() (goio.Closer, error) {
+		return s.checkoutRevision(gitClient, revision, false)
+	})
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "unable to checkout git repo %s with revision %s: %v", repo.Repo, revision, err)
+	}
+	defer io.Close(closer)
+
+	files, err := gitClient.ChangedFiles(previousRevision, revision)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "unable to get changed files for repo %s with revision %s: %v", repo.Repo, revision, err)
+	}
+
+	changed := apppathutil.AppFilesHaveChanged(refreshPaths, files)
+
+	if !changed {
+		logCtx.Debugf("no changes found for application %s in repo %s from revision %s to revision %s", request.AppName, repo.Repo, previousRevision, revision)
+		return &apiclient.ChangeRevisionResponse{}, nil
+	}
+
+	revisions, err := gitClient.ListRevisions(previousRevision, revision)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "failed to get revisions %s..%s", previousRevision, revision)
+	}
+	for _, rev := range revisions {
+		files, err := gitClient.DiffTree(rev)
+		if err != nil {
+			continue
+		}
+		changedFiles := apppathutil.AppFilesHaveChanged(refreshPaths, files)
+		if changedFiles {
+			logCtx.Debugf("changes found for application %s in repo %s from revision %s to revision %s", request.AppName, repo.Repo, previousRevision, revision)
+			return &apiclient.ChangeRevisionResponse{
+				Revision: rev,
+			}, nil
+		}
+	}
+
+	logCtx.Debugf("changes found for application %s in repo %s from revision %s to revision %s", request.AppName, repo.Repo, previousRevision, revision)
+	return &apiclient.ChangeRevisionResponse{}, nil
+}
